--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     
+    <!-- Carousel -->
+    <div class="container">
+        <div id="carousel">
+            <i class="bi bi-arrow-left-circle-fill"></i>
+            <div class="gallery">
+                <img src="img/01.webp" alt="spiderman" class="active">
+                <img src="img/02.webp" alt="rachet">
+                <img src="img/03.webp" alt="">
+                <img src="img/04.webp" alt="">
+                <img src="img/05.webp" alt="">
+            </div>
+            <i class="bi bi-arrow-right-circle-fill"></i>
+        </div>
+    </div>
 </body>
 </html>
