--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Carousel -->
     <div class="container">
         <div id="carousel">
-            <i class="bi bi-arrow-left-circle-fill"></i>
+            <i class="bi bi-arrow-left-circle-fill" id="prev"></i>
             <div class="gallery">
                 <img src="img/01.webp" alt="spiderman" class="active">
                 <img src="img/02.webp" alt="rachet">
@@ -22,7 +22,7 @@
                 <img src="img/04.webp" alt="">
                 <img src="img/05.webp" alt="">
             </div>
-            <i class="bi bi-arrow-right-circle-fill"></i>
+            <i class="bi bi-arrow-right-circle-fill" id="next"></i>
         </div>
     </div>
 </body>
